--- a/identity-service/package.json
+++ b/identity-service/package.json
@@ -44,12 +44,11 @@
     "argon2": "^0.41.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "express-rate-limit": "^7.5.0",
     "helmet": "^8.0.0",
     "ioredis": "^5.5.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0",
-    "rate-limit-redis": "^4.2.0",
+    "rate-limiter-flexible": "^5.0.5",
     "request-ip": "^3.3.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
